--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <li>
           <img src="./img/cover/shouvik2.jpg" alt="Background image of Shouvik">
           <div class="caption right-align grey-text text-lighten-4">
-            <h3>Love Pentesting</h3>
-            <h5>CTF Competitions</h5>
+            <h3>OSCP Certified</h3>
+            <h5>Love Pentesting</h5>
             <h5>Gamer</h5>
           </div>
         </li>
