--- a/index.html
+++ b/index.html
@@ -28,16 +28,15 @@
         <li>
           <img src="./img/cover/shouvik1.jpg" alt="Background image of Shouvik">
           <div class="caption center-align grey-text text-lighten-5">
-            <h3>Looking For<br>Cyber Security Analyst?</h3>
+            <h3>Looking For<br>Security Consultant?</h3>
             <h5>Check out my portfolio</h5>
           </div>
         </li>
         <li>
           <img src="./img/cover/shouvik2.jpg" alt="Background image of Shouvik">
           <div class="caption right-align grey-text text-lighten-4">
-            <h3>OSCP Certified</h3>
-            <h5>Love Pentesting</h5>
-            <h5>Gamer</h5>
+            <h3>OSCP|CRTO</h3>
+            <h5>Offensive Security</h5>
           </div>
         </li>
       </ul>
