--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container center">
       <h3>About Shouvik</h3>
       <h6 class="grey-text text-darken-1">
-        A passionate Information Security Analyst & Researcher who cares about Security of Cyber Space and has been well trained with Pentesting knowledge and skills. 
+        A passionate 0ff3ns!ve Security Researcher who cares about Security of Cyber Space and has been well trained with Pentesting knowledge and skills. 
       </h6>
       <div class="row center">
         <!--Blog Post Be Placed Here-->
