--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container center">
       <h3>About Shouvik</h3>
       <h6 class="grey-text text-darken-1">
-        An enthusiastic 0ff3ns!ve Security Researcher dedicated to safeguarding the cyber realm, extensively trained in the art of penetration testing with a strong commitment
+        An enthusiastic 0ff3ns!ve Security Researcher dedicated to safeguarding the cyber realm, extensively trained in the art of penetration testing with a strong commitment of offensive security
       </h6>
       <div class="row center">
         <!--Blog Post Be Placed Here-->
